typo fixes in intro and chap1 added

--- a/chap2.tex
+++ b/chap2.tex
@@ -662,14 +662,15 @@ likely important to how autonomous vehicles may drive.\footnote{The
   stationary, set too high, allowed one vehicle to interpret the other
   as stationary, leaving no room for unexpected behavior \cite{collisionPaper}.}
 Categories alone, even if achieved, are also insufficient if detected
-objects are treated solely as obstacles to be avoided. One notable
-researcher whom I spoke to drives around searching 
-for, and attempting to photograph, situations he believes will cause
-trouble for current vehicles. His collection includes many situations with police
+objects are treated solely as obstacles to be avoided. John Leonard
+has attempted to capture situations he believes will cause
+trouble for current vehicles. His collection of photographs and videos
+includes many situations with police 
 directing traffic, especially when combined with sun glare or
 occlusions of the sight lines---such as by a mail relay box---that
 would make predictions regarding oncoming 
-objects difficult. His take-away from these situations is that there
+objects difficult.\footnote{Discussion with the author, December 3,
+  2014.} His take-away from these situations is that there 
 is a significant body of edge-cases that make full autonomy
 impractical for the foreseeable future. Instead, humans will be
 required to account for these sorts of difficult perceptual situations. 
@@ -1104,7 +1105,7 @@ scrutiny\footnote{As Jim Womack pointed out to me, there is no good side
 to change as a regulator. Regulators are not congratulated when things
 go right, only criticized when things go wrong. So some measure of
 tentativeness is almost certainly justified to the regulatory mind.
-(Discussion with the author, December 3, 2014)} as
+(Discussion with the author, December 3, 2014).} as
 to whether a human could have prevented the accident. If,
 instead, human oversight to otherwise fully automated systems were
 required, the additional risks of supervision would also need to be
