--- a/concl.tex
+++ b/concl.tex
@@ -712,8 +712,10 @@ Third, as part of this question, how do humans interact with and
 respond to AI systems that cannot simply be said to
 ``think'', ``know'', or ``understand'' in the same ways that we do (at
 least not yet) but which nevertheless hold our lives in their hands?
+And how can human decision making in the design of such systems be
+reasonably and successfully audited?
 These concerns may be ameliorated by human involvement and
-supervision. Which means we must consider what types of supervision,
+supervision in operations, which means we must consider what types of supervision,
 and on what time scales, are socially or legally valuable, and
 therefore should be built into that technology. 
 
