--- a/intro.tex
+++ b/intro.tex
@@ -22,7 +22,7 @@ ungracefully, to a halt.
 \section{Concepts, Models, Dreams}
 
 While present work on automated vehicles by Google, Mercedes, Tesla,
-and others might lead one to think that self-driving vehicles are a
+and others might lead one to think that driverless vehicles are a
 new idea, specifically enabled by recent advances in artificial
 intelligence, they have not merely been dreamed about, but actually
 built in prototype form, as far back as 1925, when Houdina Radio Control
@@ -32,7 +32,7 @@ characterize a 90-year engineering journey as the continual
 progression toward a ``modern,'' developed device. There is nothing
 fundamentally natural about the way automated---or, often interchangeably
 ``autonomous,'' ``driverless,'' or ``self-driving''\footnote{I indeed use these terms
-  interchangeably at times even within this text, but I should mention
+  interchangeably at times even within this text, so I should mention
 the specifics of their use here. Autonomous, driverless, and self-driving
 vehicles are generally one and the same, though the terms
 ``driverless'' and
@@ -44,7 +44,9 @@ have become increasingly automated over the past 50 years (through
 ABS, traction control, cruise control, automatic transmissions, etc.) without, so
 far at least, becoming autonomous. This point, simple though it
 sounds, is at the center of this thesis and is specifically the focus
-of chapter \ref{chap:3}.}---vehicles are being
+of chapter \ref{chap:3}. I use \emph{automated} to refer to any amount
+or kind of automation, and the other terms interchangeably when
+implying more complete automation.}---vehicles are being
 envisioned, designed, and talked about. Instead, automated vehicle
 development has sustained several successive, overlapping paradigms,
 in part, though not completely, driven by the technical capabilities
