--- a/main.bib
+++ b/main.bib
@@ -1339,6 +1339,14 @@
    year = "1988",
 }
 
+@BOOK{Aramis,
+   author = "Bruno Latour",
+   title = "{A}ramis, or the {L}ove of {T}echnology",
+   publisher = "Harvard University Press",
+   address = "Cambridge, MA",
+   year = "1996",
+}
+
 @BOOK{SuchmanPlans,
    author = "Lucy Suchman",
    title = "{H}uman {M}achine {R}econfigurations: {P}lans and {S}ituated {A}ctions",
