my full corrections applied to all chapters, sections; bib still needs cleaning

--- a/concl.tex
+++ b/concl.tex
@@ -11,7 +11,7 @@ narrative and the real histories that support that narrative. What
 should be clear from this thesis, but which must be made clearer in the
 public discourse about increasingly automated technologies, is that a
 movement from human systems, through hybrid systems, to fully
-autonomous systems autonomous is not inevitable. It is not a
+autonomous systems is not inevitable. It is not a
 requirement of technological progress, or a fundamental fact about the
 future, but one narrative among many which must be conditional on our
 acceptance as well as on technological, and in many cases
@@ -43,7 +43,7 @@ modern urban landscape, an inhumanity that current urban designers are
 interested in reversing. 
 
 Early automobiles and streetcars shared the roads with other social
-uses. And this space sharing caused problems for the drivers and
+uses. This space sharing caused problems for the drivers and
 manufacturers of fast moving, dangerous vehicles, which all too
 frequently inflicted bodily harm on those people with which they
 shared the environment. The regimentation of public space into
@@ -55,16 +55,17 @@ drivers' job to avoid you, not your job to avoid them,'' describes
 Peter Norton, the author of \emph{Fighting Traffic}
 \cite{voxNorton}.
 But accidents nevertheless occurred, and the victims were primarily
-children and the elderly\cite{voxNorton}; and the deaths of children,
-specifically, came to have a new social meaning that made them
+children and youths \cite[p. 11]{nortonFighting}; and the deaths of
+children came to have a new social meaning that made them 
 particularly abhorrent.
-After Mary Miner's death in 1903, the driver was almost beaten by a
-mob \cite[p. 22]{zelizer}. Accidental deaths of children were an
+After Mary Miner's death in 1903, the driver ``had a narrow escape
+from violence at the hands of a mob estimated by the police . . . to
+have been 3,000 strong'' \cite[p. 22]{zelizer}. Accidental deaths of children were an
 alarming problem, with a significant public response:  mobs attacked
 the killers, acts of public mourning memorialized the lost, and a
 national safety campaign began to attempt to reduce these
 deaths \cite[p. 23]{zelizer}. Public outrage cast automobiles as
-``frivolous playthings'' or ``pleasure cars''\cite{voxNorton}, magnified
+``frivolous playthings'' or ``pleasure cars'' \cite[p. 12]{nortonFighting}, magnified
 by a transformation in the sentimental worth of
 children. 
 
@@ -76,7 +77,7 @@ to find some space for play amid crowded tenements \cite[p.
 easily, and their ``eviction'' from the streets came about via safety
 campaigns and ``Americanization programs''---which encouraged
 immigrant children to use playgrounds, instead of streets, as their
-play spaces---catalyzed by the automotive threat\cite[p.
+play spaces---catalyzed by the automotive threat \cite[p.
   35]{zelizer}. But the deaths of children at the hands of
 automobiles were not solely placed on the shoulders of drivers. As the
 death rate became a national crisis, the
@@ -84,7 +85,7 @@ early press ``pinned most of the blame on parents'': modern life, it
 was said, ``cannot be retarded to enable heedless children to get out
 of the way'' \cite[p. 37]{zelizer}. Street games were turned into
 criminal offenses by around 1914, and the police arrested many
-children, but fatalities kept increasing nonetheless\cite[p.
+children, but fatalities kept increasing nonetheless \cite[p.
   38]{zelizer}. Families were called upon to take a greater role
 in protecting children from the perils of the street; mothers were
 charged with keeping their children out of ``what had been their play
@@ -93,7 +94,7 @@ crusaders tended to blame mothers for the deaths of their own
 children \cite[p. 73]{lochlannjain}. The homogenization of the road
 for ``transit'' \cite[p. 73]{lochlannjain} involved not only
 family pressures but a concerted legal and public relations campaign. Automakers
-and dealers, concerned by public pressure for speed governors on
+and dealers, concerned by public pressure supporting speed governors on
 automobiles, pushed for stricter pedestrian controls across the country, and
 auto industry groups exerted significant pressure on the creation of
 the 1928 Model Municipal Traffic Ordinance in order to build a law
@@ -117,7 +118,7 @@ street to their own advantage.\footnote{Cars were not, however, the
 the beginning of the street as we know it. Instead, the bicycle marks the
 beginning of the ``good roads'' movement, and the push for ubiquitous
 road
-paving\cite{voxCycle}.
+paving \cite{voxCycle}.
 Bicycles and the social groups that championed their use--aided by
 asphalt manufacturers and other special interests who saw money to be
 made---created the 
@@ -135,7 +136,7 @@ proper role? We know that a road is intended for driving precisely
 because we have been taught according to a social code that was
 designed to foster automobility. What is the new epistemology needed
 to make sense of devices like 
-automated vehicles in their every-day existence? We are so far not
+automated vehicles in their everyday existence? We are so far not
 used to encountering such devices
 except in weak forms such as cruise control and automated
 transmissions. How should we regard them?
@@ -198,7 +199,7 @@ them'' \cite{androidHuman}.
 While ``Pete Something-or-Other'' does not yet exist, ``Fred White''
 is already here. Fully comprehending this is a critical task for the
 maintenance of cogent, productive public conversations---and
-policymaking---about automated vehicles.}
+policymaking---about automated vehicles and automated technologies in general.}
 
 %%TODO (DONE) insert cyborg ref briefly
 %While they may permeate Hollywood movies, most people would probably
@@ -256,15 +257,22 @@ vehicles \cite[p. 65]{ekbia}.
 %% mentioning Haraway, hers is not the vision I find most relevant for
 %% understanding automated vehicles. Instead, I would like to consider
 
-But, more fundamentally, philosopher Andy
-Clark contends that humans are ``(disguised) \emph{natural-born}
-cyborgs'' \cite[p. 66]{ekbia}. This idea is particularly compelling
+More fundamentally, philosopher Andy
+Clark contends that humans are ``\emph{natural-born}
+cyborgs'' \cite[p. 6]{clarkNBC}. This idea is particularly compelling
 because it need make no distinction between the analog and the
-digital, the material and the virtual. It is not an artifact of the
+digital, the material and the virtual. A cyborg nature is not an artifact of the
 present moment, but a fundamental component of human experience. To
 Clark, our ``ability to enter into deep and complex relationships with
 nonbiological constructs, props, and aids'' is what best explains our
-distinctive intelligence \cite[p. 66-67]{ekbia}. This therefore holds
+distinctive intelligence \cite[p. 5]{clarkNBC}.\footnote{While Ed
+  Hutchins looks at these tools and stresses the importance of
+  analyzing at a system level, Clark suggests these tools ``are best
+  conceived as proper parts of the computational apparatus that
+  constitutes our minds'' \cite[p. 6]{clarkNBC}. These conflicting views are
+  united in their careful consideration of the properties of nonhuman artifacts,
+  and both have something to add to nuanced examination of automation
+  systems.} This therefore holds 
 not just for cars, or information and computer technologies, but for
 all kinds of technology. Our existence as a technological species is
 not new, and human technological augmentation goes back into
@@ -284,30 +292,22 @@ human achievement---even some that are deeply ingrained in the human
 factors engineering work I lean on in chapter \ref{chap:3}. We are
 possessed by the idea that our technologies change, but that the human
 being remains fundamentally the same.\footnote{As Richard Horner put
-  it to the test pilots assembled at the SETP banquet in 1957: ``the
+  it to the test pilots assembled at the SETP banquet in 1957 (see
+  chapter \ref{chap:3}): ``the
   one link in the manned system which we have that improves the least
-  in successive generations, is the man himself''\cite[p.
+  in successive generations, is the man himself'' \cite[p.
     19]{DM}.} However, this assumption rests on a long held 
 dichotomy of human and machine, and the idea that the object of
 interest is the purely biological human. If prosthetics and artificial
 organs teach us anything, however, it should be that these boundaries
 are by no means clear. AI is however heir to a world of such sharp
 boundaries: mind and body, subject
-and object, nature and culture, science and politics \cite[p.
-  327]{ekbia}. Science, engineering, and broader culture ``embody'' and
+and object, nature and culture, science and politics. Science, engineering, and broader culture ``embody'' and
 ``regenerate'' these divisions \cite[p. 327]{ekbia}, but they are
 fundamentally only true or useful analytical frameworks, so we must
 ask whether they continue to serve us well, or whether they should,
-despite their attractive simplicity, be retired.\footnotemark Cognitive
-anthropology starts to break down these 
-divides, with the inspection of a human-machine cognitive system as a
-whole, but there is more to be done. Ekbia asks, what happens if we
-abandon the outmoded question of whether machines can reach our level
-of intelligence or capability, and instead ask how  ``humans and machines
-[are] mutually constituted through discursive practices?'' \cite[p.
-  328]{ekbia}. 
-
-\footnotetext{Ekbia, considering the source of ideologies of AI, sees its roots in
+despite their attractive simplicity, be retired.\footnote{Ekbia,
+  considering the source of ideologies of AI, sees its roots in 
 the teachings of Democritus---carried forward by Hobbes
 and Descartes---and the separation of the atomist world and our
 representations of it \cite[p. 331]{ekbia}. These dualisms are deeply
@@ -315,17 +315,24 @@ engrained in our
 thought patterns, but fail us when thinking about advanced
 technologies and their impacts because they favor unrealistic---and
 indeed, unreal---totalisms: all human or all machine, fully manual driving or fully
-autonomous driving.}
+autonomous driving.} Cognitive
+anthropology starts to break down these 
+divides, with the inspection of a human-machine cognitive system as a
+whole, but there is more to be done. Ekbia asks, what happens if we
+abandon the outmoded question of whether machines can reach our level
+of intelligence or capability, and instead ask how  ``humans and machines
+[are] mutually constituted through discursive practices'' \cite[p.
+  328]{ekbia}?
 
 %% TODO: FIX THIS FOOTNOTE, make it clearer how it fits
 
-The problem facing AI, according to Lucy Suchman\footnote{Note that
-  Ekbia cites this statement as well
-  \cite[p. 331-332]{ekbia}.}, ``is less that we attribute agency to
+The problem facing AI, according to Lucy Suchman,\footnote{Note that
+  Ekbia mobilizes this statement as well in his arguments
+  \cite[p. 331-332]{ekbia}.} ``is less that we attribute agency to
 computational artifacts than that our language for talking about
 agency, whether for persons or artifacts, presupposes a field of
 discrete, self-standing entities'' \cite[p. 263]{SuchmanPlans}.
-Instead, we should be asking how does intelligent behavior emerge in
+Instead, we should be asking how intelligent behavior emerges in
 the interactions of 
 humans and machines, refusing to fix \emph{a priori} the category of
 the human. Automated vehicles are a product of AI, and are vulnerable
@@ -335,7 +342,7 @@ New epistemologies, involving perhaps a broader recognition of our
 cyborg nature,  may be
 necessary at multiple levels. At the level of the individual, what is
 the role or status of the human, and that of the machine? How do we
-classify, and make sense of, users and devices, and their
+classify and make sense of users and devices, and their
 relationships of supervision and co-operation? At the level of the
 system, what new understandings of the role and purpose of the road
 itself are needed if we want to make use of automated technologies to
@@ -353,10 +360,10 @@ torts to different actors in the system may vary from situation to
 situation, given the capacities of 
 the vehicle and the driver \cite[p. 267]{suemycar}. However,
 the current liability framework does have problems, including the
-potential to scapegoat the human being, and the expense and difficulty
+potential to scapegoat the human being, as well as the expense and difficulty
 of pursuing litigation.}
 The question of what we can actually ask the human to do, and hold them to task
-for, is a critical question both for automation system design and the
+for, is critical both for automation system design and the
 legal handling of cases involving such automation.
 %% Sidenote: important to note that issues of litigation for full autonomy are
 %% not even part of the debate yet, we just aren't at the stage where it
@@ -370,11 +377,11 @@ legal handling of cases involving such automation.
 %% scapegoated all too often in industrial accidents involving human
 %% supervisors interacting with automation.
 
-And questions of the appropriate role of the human being involve not
+Questions of the appropriate role of the human being involve not
 only the supervisor, within the vehicle or in a remote data center,
-but other users in the environment. If streets must be re-made in
+but other users in the environment. If streets must be remade in
 order to make certain technological configurations viable, is that
-re-making something the public is willing to accept? And who will
+remaking something the public is willing to accept? And who will
 benefit from it? As Dieter Zetsche, chairman of Daimler AG describes,
 ``anyone who focuses solely on the technology has not yet grasped how 
 autonomous driving will change our
@@ -382,7 +389,7 @@ society'' \cite{slashgearDavies}.
 But as we have found in the past, changes that favor the users or
 manufacturers of automated vehicles may not favor other users of city
 spaces, who may find their freedoms foreclosed upon. The history of
-the re-making of the city and street is part of why I hold that
+the remaking of the city and street is part of why I hold that
 vehicle automation is not an 
 independent factor to be maximized, but a variable that is firmly
 intertwined with the design of the whole transport system.
@@ -393,7 +400,7 @@ social and economic pressure to catalyze that change.\footnote{Technologies do
 not alone bring about those changes, but their presence, availability,
 and market viability provide incentives for groups to encourage broad
 social and infrastructural changes.} The automated vehicle represents
-another possible nexus for change, but how the city will be re-shaped
+another possible nexus for change, but how the city will be reshaped
 is an open question. 
 
 
@@ -418,7 +425,7 @@ that are supervised by remote operators within the datacenters of
 multinational IT corporations.\footnote{I have encountered few
   companies who seem to be honest about this supervisory arrangement,
   but the founder and CEO of the mini-cab app company Kabbee envisions
-just such a thing: ``There’s no reason why a taxi driver couldn't have
+just such a thing: ``There's no reason why a taxi driver couldn't have
 something like three screens in front of him . . . and sit in a studio
 directing three or four or five cars through the roads of London where
 they are driverless cars with a human controlling the GPS''
@@ -441,8 +448,8 @@ operators---whether that catastrophe is measured by personal death or
 system failure leading to financial ruin. Even Tesla Motors, bullish
 about its forthcoming ``autopilot'' technology, admits the limitations
 of current automated systems: automated driving will not be available
-in residential neighborhoods because they do not believe it is safe
-enough\cite{slashgearDaviesT}.
+in residential neighborhoods because Tesla does not believe it is safe
+enough \cite{slashgearDaviesT}.
 More capable systems, able to operate without failure in a greater
 proportion of real-world situations, may require human involvement and
 supervision, at the very least until significant open problems in
@@ -458,20 +465,27 @@ completely to computers. The method and timescale of automated
 operation may greatly impact 
 public acceptance, to the point that certain types of human
 involvement may be required to produce marketable
-technologies.\footnote{Other barriers to public acceptance that are
-  amenable to alternative operational modes include travel sickness. A
+technologies.\footnote{Travel sickness is another potential barrier to
+  public acceptance. A
   recent University of Michigan study suggests car sickness could be a
-  problem for automated vehicle systems, as well as significantly reducing their
+  problem for automated vehicle systems,  significantly reducing their
   convenience factor
-  \cite{SivakSchoettleSick}.
-  Certain levels of human involvement would reduce the perceived productivity
-  gains of automated systems, but could ameliorate travel sickness issues.} Though
+  \cite{SivakSchoettleSick}. The authors suggest fixes, including
+  maximizing passengers' view with large windows and forcing them to
+  face forward---but a
+  public-rapid-transit researcher I spoke to described that his group
+  had found minimizing or eliminating forward view made riders in
+  automated PRT systems
+  most comfortable.
+  Certain levels of human involvement would also reduce the perceived productivity
+  gains of automated systems, but could ameliorate travel sickness
+  issues.} Though
 this may be distasteful to some technologists invested in furthering
 technological solutions to social problems, it is not fundamentally
 a failure. It is a societal choice to which engineering solutions
 should be pliable.
 
-Many examples of hybrid systems exist, and joint-cognitive-systems
+Many examples of hybrid systems exist, and joint-cognitive systems
 design presents an alternative way of looking at problems, and valuing
 human and machine contributions to their solution, that opens the way
 for other futures. And as we have seen, these approaches and
@@ -482,20 +496,20 @@ successful real-world systems. The hybrid human-machine system is a
 very difficult engineering problem---we are not necessarily making
 things easier on ourselves by choosing such a solution compared to a
 more fully automated one, something even the Department of Defense,
-hardly a bunch of technophobes, finds it important to recognize---but
+hardly an organization of technophobes, finds it important to recognize---but
 it is also a valuable approach for 
 systems that are tasked with keeping us safe, whether in space, in the
 air, or on the ground. In applying this approach, however, it is
 important to keep in mind the extent to which we are re-making
 ourselves into managers or into machine tenders:  Are we maintaining a sense of
-creative agency? Or becoming wheels in the machinery of capital? And
+creative agency? Or becoming wheels in the larger machinery of capital? And
 this is especially true as we will use our 
 vehicles every day, and cannot afford to alienate ourselves from them.
 A future in which our transportation system is indifferent to us is
 not a productive future to be lauded, but a destructive one to be
 avoided. 
 
-This discussion has tried to frame the largely invisible histories involved in
+This discussion has tried to frame the overlooked histories involved in
 notions of autonomy and automation, the ideologies flowing into the
 dreams of driverless cars and attendant approaches to system design.
 When we use factory automation, artificial intelligence, ``NASA
@@ -534,11 +548,11 @@ different futures. There is no reason that commonly accepted ideas
 about complete vehicle automation are necessarily right---and that
 partial, or function-by-function automation, for example, is simply a
 stop-gap measure. In contrast to the simplistic depictions provided by
-most media representations---of pro-and-con, for-and-against, but all
+most media representations, which form the visible picture of this technology today
+for those not involved in its engineering---of pro-and-con, for-and-against, but all
 focused around a particular view of the object of study, not asking
 what automated vehicles will truly be, but only what will this assumed
-object do---which form the visible picture of this technology today
-for most people not involved in its engineering, I have described a
+object do---I have described a
 range of alternative narratives that complicate our ideas of what
 automated vehicles can and will be.
 
@@ -565,15 +579,18 @@ disparities in mobility between the wealthy and the homeless? It is
 fantastical thinking to believe that the just-add-autonomy approach
 will automatically achieve all these goals. Each presents a
 system-wide design problem, involving cars, people, and
-infrastructures, that puts different demands on possible solutions.
-And some contradict the motives of organizations responsible for
+infrastructures, that puts different demands on possible
+solutions. Some goals may be directly conflicting, such as increasing
+mobility while reducing 
+environmental impacts.
+Others contradict the motives of organizations responsible for
 providing the solutions:  while automobile companies can promulgate
 ideas about how automated vehicles can provide greater mobility, help
 the environment, and reduce traffic, they are unlikely to economically
 back concepts that are against their interests---anything that reduces
 the number of vehicles on the road,\footnote{Thanks to Joe Dumit for eloquently
   making this observation during a recent visit I made to UC Davis.}
-or the overall cost of those 
+or reduces the overall cost of those 
 vehicles, without providing a new revenue stream to compensate,
 represents a deeply suspect investment. 
 
@@ -584,7 +601,7 @@ companies to wrest greater control over everyday life, to worm their
 way more deeply into our existence and thereby make themselves
 indispensable. Automation can be a tool to enable one group of
 people---technologists running multinational organizations---at the
-expense of the rest of us.
+expense of the rest of society.
 But it also does not have to be employed toward those ideological
 ends; given sufficient willpower, it can be made to serve others.
 As I held in chapter \ref{chap:2}, changes to the city
@@ -607,23 +624,23 @@ speeding up their legalization and acceptance \cite{baileyReason}
 \cite{howardRobots}. On the con-side, in 
 this interpretation, stand the risk-averse regulators: current deaths
 are obviously not on their hands, but if one child is killed by a
-``robot car,'' they face public censure. But though this cartoon-like
+``robot car,'' they face public censure. But though this cartoonlike
 view of reality does have a media public face, it does not do justice
 to the complexity of the situation. The statistics about driverless
 cars and risk, though partly a function of mathematical modeling, are
 also, fundamentally, matters of faith. No one has the precise answer.
 While we can point to the 90\% of accidents that involve human error,
 computers will fix some of these types of error but may also cause
-other problems, and increase failure rates unrelated to human error.
+other problems, and even increase failure rates unrelated to human error.
 The safety record of ``current'' vehicles is also not fixed; even if
 we were to accept the popularly figured distinction between
 incremental autonomy and ``complete'' autonomy approaches, the safety
 of increasingly autonomous vehicles is a moving target against which
 the achievements of more radical approaches would need to be compared.
 Complex changes to complex, high-stakes systems produce unpredictable
-results. So how we implement automated vehicle technology is as much
+results. So how we implement automated vehicle technology is
 about narratives, the stories we believe and tell about technology, as
-much as it is about mathematics, and modeling the world. 
+much as it is about mathematics and modeling the world. 
 
 Our choice should not be to either accept this driverless vision or take
 responsibility for the deaths of thousands. That viewpoint is abusive, coercive,
@@ -631,14 +648,14 @@ and deeply wrong, and the future is too important to be left up to
 knee-jerk techno-utopianism and blind ideology. This is not a question
 of whether fully automated cars can come to exist, even as they are
 now envisioned. I am not saying that the science-fiction dreams of
-driverless vehicles are possible or impossible, and I believe in the
+driverless vehicles are possible or impossible; moreover, I believe in the
 potential of computer technologies to achieve groundbreaking results.
 But many worlds that look lovely in science fiction represent places
 we may not actually wish to live, and these portrayals can afford to
 avoid issues of reliability and human interaction that we cannot avoid
 in the real world. There are other choices to be made as we work toward building a
 more automated future. Our choices should be between options, between
-visions, choices of how we integrate humans and computers to make our
+visions---choices of how we integrate humans and computers to make our
 driving safer, our cities more livable, our lives better. The Google model which has
 captured so much press attention is one among innumerable imagined or
 not-yet-imagined possibilities. Automation is not a
@@ -653,7 +670,7 @@ question we need to ask is what form technologies of vehicle automation
 should take, and what benefits and acceptable sacrifices adhere to
 that choice. This question is a truly multidisciplinary venture,
 involving engineering, law, policy, design, and ethics. When we
-automate, do we choose to do so with the philosophy of ``do no harm,''
+automate, do we choose to do so with the philosophy of ``do no harm''
 or ``save more lives''?\footnote{These are deep and subtle questions,
   but proclaiming them meaningless from an engineering perspective is
   to miss the importance of ideas to guide technological development,
@@ -667,10 +684,13 @@ or ``save more lives''?\footnote{These are deep and subtle questions,
   which can lead to solutions that are fundamentally inhumane. It
   would be foolish 
   to assume that medical systems, themselves a collection of
-  technologies and people, are not affected by these kinds of distinctions.} There may be hidden consequences to these
-philosophies---who is saved? and how? and who bears the cost, or is
+  technologies and people, are not affected by these kinds of
+  distinctions. As these logics are applied elsewhere, their uncertain
+  outcomes
+  will remain important.} There may be hidden consequences to these 
+philosophies---Who is saved? How? Who bears the cost, or is
 counted out in order to save the greater number?---that come to deeply
-affect how systems engineered from these alter the world.
+affect how systems engineered from them alter the world.
 %% (Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
 %% lives''?
 %% there may be hidden consequences to a philosophy of saving more lives)
@@ -678,10 +698,10 @@ affect how systems engineered from these alter the world.
 \section{Lingering Questions}
 
 The purpose of this thesis has been to sweep away some lazy thinking
-about automated systems, and to try to re-orient a more nuanced dialog
-around different sets of issues. As we think about the future of
+about automated systems, and to try to reorient a more nuanced dialog
+around different sets of issues. As we consider the future of
 vehicle automation---whether as
-designers, lawmakers, interested technologists or concerned
+designers, lawmakers, interested technologists, or concerned
 citizens---what are the questions we should be asking? What should we
 grapple with instead of accepting common framings of the issues
 involved? To conclude, let me summarize the main open questions around
@@ -715,8 +735,8 @@ least not yet) but which nevertheless hold our lives in their hands?
 And how can human decision making in the design of such systems be
 reasonably and successfully audited?
 These concerns may be ameliorated by human involvement and
-supervision in operations, which means we must consider what types of supervision,
-and on what time scales, are socially or legally valuable, and
+supervision in operations, which means we must consider what types and
+time-scales of supervision are socially or legally valuable, and
 therefore should be built into that technology. 
 
 Fourth, how should we value different automation approaches, or
@@ -776,8 +796,9 @@ Recognizing that continued human involvement will occur as a matter of
 principle is 
 the most important first step we can take toward rebalancing the
 narrative of automation toward something more productive, which takes
-seriously the technological hybridity of our past, present and future.
-And it paves the way for a political critique of automated vehicles
+seriously the technological hybridity of our past, present, and future.
+In addition, this recognition paves the way for a political critique
+of automated vehicles 
 that asks, knowing 
 that humans remain involved, who they are, where they are, and how
 the system is being designed to serve their needs or impede their
