--- a/main.bib
+++ b/main.bib
@@ -1368,6 +1368,7 @@
    title = "Project Gemini - A Chronology. Part 1 (A)",
    type = "NASA Special Publication",
    number = "4002",
+   year = "1968",
    note = "http://www.history.nasa.gov/SP-4002/p1a.htm",
 }
 
@@ -1376,6 +1377,7 @@
    title = "Spacecraft computer program requirements for AS-207/208",
    type = "Memo from FM1/Assistant Chief, Mission Planning and Analysis Division",
    number = "66-FM1-59",
+   year = "1966",
    note = "http://tindallgrams.net/66-FM1-59",
 }
 
@@ -1383,6 +1385,7 @@
    author = "Donald C. Cheatham and Floyd V. Bennett",
    title = "{A}pollo Lunar Module Landing Strategy",
    type = "NASA Manned Spacecraft Center Report",
+   year = "1966",
    note = "http://ocw.mit.edu/courses/science-technology-and-society/sts-471j-engineering-apollo-the-moon-project-as-a-complex-system-spring-2007/readings/4\_2\_lunr\_landing.pdf",
 }
 
@@ -1391,6 +1394,7 @@
    title = "{A}pollo Experience Report - Mission Planning for Lunar Module Descent and Ascent",
    type = "NASA Technical Note",
    number = "NASA TN D-6846",
+   year = "1972",
    note = "http://www.hq.nasa.gov/alsj/nasa-tnd-6846pt.1.pdf",
 }
 
@@ -1405,10 +1409,11 @@
 }
 
 @TECHREPORT{Seamans,
-   author = "Robert C. Seamans Jr.",
+   author = "Seamans, Jr., Robert C.",
    title = "{P}roject {A}pollo: {T}he {T}ough {D}ecisions",
    type = "Monographs in Aerospace History",
-   number = "No. 37 SP-2005-4537",
+   number = "No. 37 SP-2007-4537",
+   year = "2007",
    note = "http://history.nasa.gov/monograph37.pdf",
 }
 
@@ -1502,7 +1507,7 @@
 }
 
 @ARTICLE{rowsomePopsci,
-   author = "Frank Rowsome Jr.",
+   author = "Rowsome, Jr., Frank",
    title = "1958 Imperial: What It's Like To Drive An Auto-Pilot Car",
    journal = "Popular Science",
    month = "April",
@@ -2066,6 +2071,40 @@
    year = "2014",
    note = "https://www.media.volvocars.com/us/en-us/media/pressreleases/145619/volvo-car-groups-first-self-driving-autopilot-cars-test-on-public-roads-around-gothenburg",
 }
+
+@BOOK{thrunProb,
+   author = "Sebastian Thrun and Wolfram Burgard and Dieter Fox",
+   title = "{P}robabilistic {R}obotics",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2005",
+}
+
+@ARTICLE{greenDistraction,
+   author = "Michael Green",
+   title = "{D}istraction and {T}een {C}rashes: {E}ven {W}orse than {W}e {T}hought",
+   journal = "AAA NewsRoom",
+   month = "March 25",
+   year = "2015",
+   note = "http://newsroom.aaa.com/2015/03/distraction-teen-crashes-even-worse-thought/",
+}
+
+@BOOK{nortonFighting,
+   author = "Peter D. Norton",
+   title = "{F}ighting {T}raffic: {T}he {D}awn of the {M}otor {A}ge in the {A}merican {C}ity",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2008",
+}
+
+@BOOK{clarkNBC,
+   author = "Andy Clark",
+   title = "{N}atural-{B}orn {C}yborgs: {M}inds, {T}echnologies, and the {F}uture of {H}uman {I}ntelligence",
+   publisher = "Oxford University Press",
+   address = "New York, NY",
+   year = "2004",
+}
+
 
 
 
